--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
     <header>
       <div class="inner">
         <a href="https://revolutionchina.github.io/">
-          <h1>RevolutionChina.github.io</h1>
+          <h1>中国工党</h1>
         </a>
-        <h2></h2>
+        <h2>官方页面</h2>
        
       </div>
     </header>
