--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <header>
       <div class="inner">
         <a href="https://revolutionchina.github.io/">
-          <h1>中国工党</h1>
+          <h1>中國工黨</h1>
         </a>
         <h2>官方页面</h2>
        
